Add logout to auth
