# server/src/app.controller.ts
@@ -1,13 +1,7 @@
-import { Controller, Get } from '@nestjs/common';
+import { Controller } from '@nestjs/common';
 import { AppService } from './app.service';
 
 @Controller()
 export class AppController {
   constructor(private readonly appService: AppService) {}
-
-  @Get('/api')
-  getHello(): string {
-    console.log('Hello from AppController');
-    return this.appService.getHello();
-  }
 }
